ConnexoProject/force-app/main/default/objects/Affected_Material__c/Affected_Material__c.object-meta.xml
<CustomObject>
    <label>Affected Material</label>
    <nameField>
        <displayFormat>MAT-{0000}</displayFormat>
        <label>Affected Material Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Affected Materials</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>