ConnexoProject/force-app/main/default/objects/Affected_Material__c/fields/Material_ID__c.field-meta.xml
<CustomField>
    <fullName>Material_ID__c</fullName>
    <label>Material Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>