ConnexoProject/force-app/main/default/objects/Affected_Material__c/fields/Material_Type__c.field-meta.xml
<CustomField>
    <fullName>Material_Type__c</fullName>
    <label>Material Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GMP Critical Material (CM)</fullName>
            </value>
            <value>
                <fullName>Research Material (RE)</fullName>
            </value>
            <value>
                <fullName>Quality Control Reference Material (RM)</fullName>
            </value>
            <value>
                <fullName>GMP Non-Critical Material (NC)</fullName>
            </value>
            <value>
                <fullName>Quality Control Material (QC)</fullName>
            </value>
            <value>
                <fullName>Prepared Solution (PS)</fullName>
            </value>
            <value>
                <fullName>Prepared Tubing (PT)</fullName>
            </value>
            <value>
                <fullName>Consumable Material</fullName>
            </value>
            <value>
                <fullName>To be added</fullName>
                <isActive>false</isActive>
                <label>To be added</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>